# MPRI-2.4-monads-teacher

./: .gitignore  Makefile  README.md  dune-project  mpri24-monads.opam  runtest.sh
data/: README.md
exercises/: Bank.ml  Dice.ml  Height.ml  Interpreter.ml  Interpreter.mli  Logger.ml  Logic.ml  Logic.mli  ParsingGame.ml  Permutations.ml  Permutations.mli  PidMaps.ml  PidMaps.mli  Reader.ml  Writer.ml  Writer.mli  dune
lib/: Continuation.ml  Continuation.mli  Error.ml  Error.mli  Monad.ml  Monad.mli  Monoid.mli  Nondeterminism.ml  Nondeterminism.mli  Parser.ml  Parser.mli  Random.ml  Random.mli  Reader.ml  Reader.mli  State.ml  State.mli  Update.ml  Update.mli  Writer.ml  Writer.mli  dune
